--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dots/misc/termcolors/crayolo"]
 	path = dots/misc/termcolors/crayolo
 	url = https://github.com/dkeg/crayolo
+[submodule "dots/NvChad"]
+	path = dots/NvChad
+	url = https://github.com/NvChad/NvChad
