--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dots/doom-nvim"]
 	path = dots/doom-nvim
 	url = https://github.com/doom-neovim/doom-nvim
+[submodule "dots/NvChad"]
+	path = dots/NvChad
+	url = https://github.com/NvChad/NvChad
