--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dots/misc/termcolors/crayolo"]
 	path = dots/misc/termcolors/crayolo
 	url = https://github.com/dkeg/crayolo
+[submodule "doom-nvim"]
+	path = doom-nvim
+	url = https://github.com/ib250/doom-nvim
