--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dots/misc/termcolors/crayolo"]
 	path = dots/misc/termcolors/crayolo
 	url = https://github.com/dkeg/crayolo
-[submodule "doom-nvim"]
-	path = doom-nvim
+[submodule "dots/nvim"]
+	path = dots/nvim
 	url = https://github.com/ib250/doom-nvim
